# adv.flow

./: .gitignore  README.md  package.json
.github/workflows/: release.yml
landing-website/: .env.example  .gitignore  package-lock.json  package.json
landing-website/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
landing-website/app/admin/: layout.tsx  page.tsx
landing-website/app/community/: page.tsx
landing-website/app/docs/: page.tsx
landing-website/app/download/: layout.tsx  page.tsx
landing-website/app/features/: page.tsx
landing-website/components/: AnalyticsTracker.tsx  DownloadLeadForm.tsx  DownloadModal.tsx
landing-website/components/landing/: LandingPage.tsx
landing-website/components/product/: CommunityExperience.tsx  ProductShell.tsx  (+2 more)
landing-website/data/: analytics.duckdb.wal  product-system.ts
landing-website/lib/: analytics.ts  community-mappers.ts  download-leads.ts  mongoose.ts  product-store.ts  request-meta.ts
landing-website/models/: CommunityPost.ts  DownloadLead.ts
landing-website/public/: site.webmanifest
release/cli/: install-advflow-cli.cmd
scripts/: build-installer.ps1  setup-advflow-cli.ps1
tauri/: index.html  package-lock.json  package.json
tauri/scripts/: build-sidecar.js
tauri/src/: App.css  App.tsx  BuilderWrapper.tsx  main.tsx
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/scripts/: build-cli-sidecar.ps1
tauri/src-tauri/src/: lib.rs  macro_engine.rs  main.rs  workflows.rs
tauri/src-tauri/windows/: cli-installer.nsi  nsis-hooks.nsh
(+35 files in other folders)
