[package]
name = "advflow"
version = "0.1.0"
description = "Desktop workflow automation app"
authors = ["AdvFlow"]
edition = "2021"
default-run = "advflow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
enigo = "0.6.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.23.1", features = ["v4"] }
tauri-plugin-dialog = "2.7.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
mongodb = "3.3.0"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
libc = "0.2"
device_query = "2.1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

